--- a/Services/Catalog/MultiShop.Catalog/MultiShop.Catalog.csproj
+++ b/Services/Catalog/MultiShop.Catalog/MultiShop.Catalog.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\ProductImageServices\" />
+    <Folder Include="Services\ProductDetailServices\" />
+    <Folder Include="Services\ProductServices\" />
+  </ItemGroup>
+
 </Project>
