--- a/Services/Catalog/MultiShop.Catalog/appsettings.json
+++ b/Services/Catalog/MultiShop.Catalog/appsettings.json
@@ -3,7 +3,7 @@
     "CategoryCollectionName": "Categories",
     "ProductCollectionName": "Products",
     "ProductDetailCollectionName": "ProductDetails",
-    "ProductImageCollectionName": "ProductImages"
+    "ProductImageCollectionName": "ProductImages",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "MultiShopCatalogDb"
   },
