--- a/Services/Discount/MultiShop.Discount/MultiShop.Discount.csproj
+++ b/Services/Discount/MultiShop.Discount/MultiShop.Discount.csproj
@@ -13,6 +13,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.26" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.26">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -23,7 +24,6 @@
   <ItemGroup>
     <Folder Include="Controllers\" />
     <Folder Include="Dtos\" />
-    <Folder Include="Context\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
