--- a/Services/Discount/MultiShop.Discount/appsettings.json
+++ b/Services/Discount/MultiShop.Discount/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-R7AR1ND;initial Catalog=UdemyCarBookDb;integrated Security=true;TrustServerCertificate=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
