--- a/Services/Order/Presentation/MultiShop.Order.WebApi/MultiShop.Order.WebApi.csproj
+++ b/Services/Order/Presentation/MultiShop.Order.WebApi/MultiShop.Order.WebApi.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\MultiShop.Order.Application\MultiShop.Order.Application.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\MultiShop.Order.Persistence\MultiShop.Order.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
