--- a/Services/Catalog/MultiShop.Catalog/Properties/launchSettings.json
+++ b/Services/Catalog/MultiShop.Catalog/Properties/launchSettings.json
@@ -12,9 +12,9 @@
     "MultiShop.Catalog": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7260;http://localhost:5042",
+      "applicationUrl": "https://localhost:7260",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
