--- a/Services/Discount/MultiShop.Discount/Properties/launchSettings.json
+++ b/Services/Discount/MultiShop.Discount/Properties/launchSettings.json
@@ -12,9 +12,9 @@
     "MultiShop.Discount": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7294;http://localhost:5211",
+      "applicationUrl": "https://localhost:7261",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
