--- a/Services/Discount/MultiShop.Discount/appsettings.json
+++ b/Services/Discount/MultiShop.Discount/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-R7AR1ND;initial Catalog=UdemyCarBookDb;integrated Security=true;TrustServerCertificate=true;"
   },
+  "IdentityServerUrl": "http://localhost:5001",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
