--- a/Services/Order/Presentation/MultiShop.Order.WebApi/Properties/launchSettings.json
+++ b/Services/Order/Presentation/MultiShop.Order.WebApi/Properties/launchSettings.json
@@ -12,9 +12,9 @@
     "MultiShop.Order.WebApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7166;http://localhost:5085",
+      "applicationUrl": "https://localhost:7262",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
