--- a/Services/Cargo/MultiShop.Cargo.WebApi/Properties/launchSettings.json
+++ b/Services/Cargo/MultiShop.Cargo.WebApi/Properties/launchSettings.json
@@ -12,9 +12,9 @@
     "MultiShop.Cargo.WebApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7252;http://localhost:5073",
+      "applicationUrl": "https://localhost:7263",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
