--- a/Services/Discount/MultiShop.Discount/appsettings.json
+++ b/Services/Discount/MultiShop.Discount/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-R7AR1ND;initial Catalog=UdemyCarBookDb;integrated Security=true;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=DESKTOP-345EPP4\\MSSQLSERVEREMRE;initial Catalog=MultiShopDiscountDb;integrated security=true"
   },
   "IdentityServerUrl": "http://localhost:5001",
   "Logging": {
@@ -11,3 +11,5 @@
   },
   "AllowedHosts": "*"
 }
+
+//"Server=DESKTOP-R7AR1ND;initial Catalog=UdemyCarBookDb;integrated Security=true;TrustServerCertificate=true;"
