--- a/Frontends/MultiShop.WebUI/MultiShop.WebUI.csproj
+++ b/Frontends/MultiShop.WebUI/MultiShop.WebUI.csproj
@@ -15,4 +15,9 @@
     <Folder Include="Areas\Admin\Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Services\Catalog\MultiShop.Catalog\MultiShop.Catalog.csproj" />
+    <ProjectReference Include="..\MultiShop.DtoLayer\MultiShop.DtoLayer.csproj" />
+  </ItemGroup>
+
 </Project>
