--- a/Services/Catalog/MultiShop.Catalog/appsettings.json
+++ b/Services/Catalog/MultiShop.Catalog/appsettings.json
@@ -4,7 +4,8 @@
     "ProductCollectionName": "Products",
     "ProductDetailCollectionName": "ProductDetails",
     "ProductImageCollectionName": "ProductImages",
-    "FeatureSliderCollectionName" :  "FeatureSliders",
+    "FeatureSliderCollectionName": "FeatureSliders",
+    "SpecialOfferCollectionName": "SpecialOffers",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "MultiShopCatalogDb"
   },
