--- a/Services/Catalog/MultiShop.Catalog/appsettings.json
+++ b/Services/Catalog/MultiShop.Catalog/appsettings.json
@@ -8,6 +8,7 @@
     "SpecialOfferCollectionName": "SpecialOffers",
     "OfferDiscountCollectionName": "OfferDiscounts",
     "BrandCollectionName": "Brands",
+    "AboutCollectionName": "Abouts",
     "FeatureCollectionName": "Features",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "MultiShopCatalogDb"
