--- a/Services/Comment/MultiShop.Comment/Properties/launchSettings.json
+++ b/Services/Comment/MultiShop.Comment/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7074;http://localhost:5059",
+      "applicationUrl": "https://localhost:7265",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
