--- a/Frontends/MultiShop.WebUI/appsettings.json
+++ b/Frontends/MultiShop.WebUI/appsettings.json
@@ -1,6 +1,17 @@
 {
   "ClientSettings": {
-
+    "MultiShopVisitorClient": {
+      "ClientId": "MultiShopVisitorId",
+      "ClientSecret": "multishopsecret"
+    },
+    "MultiShopManagerClient": {
+      "ClientId": "MultiShopManagerId",
+      "ClientSecret": "multishopsecret"
+    },
+    "MultiShopAdminClient": {
+      "ClientId": "MultiShopAdminId",
+      "ClientSecret": "multishopsecret"
+    }
   },
   "Logging": {
     "LogLevel": {
