--- a/Services/Cargo/MultiShop.Cargo.WebApi/Properties/launchSettings.json
+++ b/Services/Cargo/MultiShop.Cargo.WebApi/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7263",
+      "applicationUrl": "http://localhost:7263",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
