--- a/Services/Comment/MultiShop.Comment/Properties/launchSettings.json
+++ b/Services/Comment/MultiShop.Comment/Properties/launchSettings.json
@@ -12,9 +12,9 @@
     "MultiShop.Comment": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7265",
+      "applicationUrl": "http://localhost:7265",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
