--- a/Services/Discount/MultiShop.Discount/Properties/launchSettings.json
+++ b/Services/Discount/MultiShop.Discount/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7261",
+      "applicationUrl": "http://localhost:7261",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
