--- a/Services/Order/Presentation/MultiShop.Order.WebApi/Properties/launchSettings.json
+++ b/Services/Order/Presentation/MultiShop.Order.WebApi/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7262",
+      "applicationUrl": "http://localhost:7262",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
