--- a/ApiGateway/MultiShop.OcelotGateway/MultiShop.OcelotGateway.csproj
+++ b/ApiGateway/MultiShop.OcelotGateway/MultiShop.OcelotGateway.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.26" />
     <PackageReference Include="Ocelot" Version="23.1.0" />
   </ItemGroup>
 
