--- a/Frontends/MultiShop.WebUI/appsettings.json
+++ b/Frontends/MultiShop.WebUI/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ServiceApiSettings": {
-    "OcelotServerUrl": "http://localhost:5000",
+    "OcelotUrl": "http://localhost:5000",
     "IdentityServerUrl": "http://localhost:5001",
+
     "Catalog": {
       "Path": "services/catalog/"
     },
@@ -26,7 +27,9 @@
     "Comment": {
       "Path": "services/comment/"
     }
+
   },
+
   "ClientSettings": {
     "MultiShopVisitorClient": {
       "ClientId": "MultiShopVisitorId",
