--- a/Frontends/MultiShop.WebUI/MultiShop.WebUI.csproj
+++ b/Frontends/MultiShop.WebUI/MultiShop.WebUI.csproj
@@ -16,6 +16,10 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Areas\User\Data\" />
+    <Folder Include="Areas\User\Models\" />
+    <Folder Include="Areas\User\ViewComponents\" />
+    <Folder Include="Areas\User\Views\Shared\Components\" />
   </ItemGroup>
 
   <ItemGroup>
