--- a/Services/Message/MultiShop.Message/appsettings.json
+++ b/Services/Message/MultiShop.Message/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost; Port=5432; Database=MultiShopMessageDb; User Id=postgres;Password=12345"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
