--- a/Services/Message/MultiShop.Message/Properties/launchSettings.json
+++ b/Services/Message/MultiShop.Message/Properties/launchSettings.json
@@ -12,9 +12,9 @@
     "MultiShop.Message": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7234;http://localhost:5026",
+      "applicationUrl": "http://localhost:7268",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
