--- a/Frontends/MultiShop.WebUI/appsettings.json
+++ b/Frontends/MultiShop.WebUI/appsettings.json
@@ -16,7 +16,7 @@
       "Path": "services/order/"
     },
     "Cargo": {
-      "Path": "services/cargo"
+      "Path": "services/cargo/"
     },
     "Basket": {
       "Path": "services/basket/"
